<?xml version="1.0" encoding="utf-8"?>



<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="412dp"
        android:layout_height="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download_image_green_white_arrow_hdpi" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/glide_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Glide"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/udacity_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Udacity"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/retrofit_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Retrofit"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RadioGroup>


<!--    <com.example.motionlayoutprogrammatically-->
<!--        android:id="@+id/download_button"-->
<!--        android:layout_width="350dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/guideline3"-->
<!--        app:primaryButtonColor="@color/colorPrimary" />-->

<!--    <com.example.motionlayoutprogrammatically.AnimatedDownloadButton-->
<!--        android:id="@+id/animated_download_button"-->
<!--        android:layout_width="350dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:visibility="invisible"-->
<!--        app:downloadButtonColor="@color/colorPrimaryDark"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/guideline3" />-->

<!--    <com.example.motionlayoutprogrammatically.SelectFileButton-->
<!--        android:id="@+id/select_file_button"-->
<!--        android:layout_width="280dp"-->
<!--        android:layout_height="42dp"-->
<!--        android:background="@drawable/rectangle_rounded_corners"-->
<!--        android:visibility="invisible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/guideline3"-->
<!--        app:primaryColor="@color/white" />-->

<!--    <com.example.motionlayoutprogrammatically.ProgressCircle-->
<!--        android:id="@+id/progress_circle"-->
<!--        android:layout_width="280dp"-->
<!--        android:layout_height="42dp"-->
<!--        android:visibility="invisible"-->
<!--        app:accentColor="@color/colorAccent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/guideline3" />-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="537dp" />

    <Button
        android:id="@+id/launch_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="Launch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />


    <!--    <include-->
    <!--        layout="@layout/content_main"/>-->
    <!--        tools:layout_editor_absoluteX="0dp"-->
    <!--        tools:layout_editor_absoluteY="0dp" -->

</androidx.constraintlayout.widget.ConstraintLayout>